spacing issues

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,8 +18,9 @@ header{
 }
 //hgroup for header -- should make more specific
 hgroup{
-    text-align: center;
-    margin:auto;    
+    text-align: center;   
+    margin:auto;
+    padding-bottom:75px;
     h1{
         font-family: $titlefont;
         font-size:8rem;
